# pinpoint-mcp

./: .gitignore  README.md  pyproject.toml
docs/: install.html
docs/install/: _generate_slides.py
examples/: claude_desktop_config.json
src/clawmark/: __init__.py  server.py
src/clawmark/capture/: screen.py
src/clawmark/render/: annotate.py  tutorial.py
src/pinpoint/: __init__.py  server.py
src/pinpoint/capture/: web.py
src/pinpoint/detect/: elements.py  icons.py  ocr.py
src/pinpoint/overlay/: __init__.py  daemon.py
src/pinpoint/render/: tutorial.py
