[project]
name = "pinpoint-mcp"
version = "0.1.0"
description = "MCP server for screenshot capture + intelligent annotation. Combines Playwright (web), mss (screen) and Tesseract OCR for pixel-perfect element detection."
authors = [{ name = "Hubert (rainkode)", email = "rainkode@hlsi.tech" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastmcp>=2.0.0",
    "Pillow>=10.0.0",
    "mss>=9.0.1",                  # capture écran cross-platform (rapide)
    "playwright>=1.40.0",          # capture web + DOM
    "pytesseract>=0.3.10",         # OCR (texte)
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.8", # template matching (icônes)
    "numpy>=1.24",                 # needed by opencv + icons detector
    "uiautomation>=2.0 ; sys_platform == 'win32'",  # Windows UI Automation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
pinpoint-mcp = "pinpoint.server:main"
pinpoint-overlay = "pinpoint.overlay.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinpoint"]

[tool.ruff]
line-length = 100
target-version = "py311"
